# manga-dl

./: Cargo.toml  LICENSE  readme.md
src/: anilist.rs  api.rs  int_range.rs  main.rs  manga.rs
src/manga/: chapter.rs  cover.rs  get.rs  mangadata.rs  volume.rs
