[package]
name = "manga-dl"
version = "0.1.0"
authors = ["George \"Riye\" Hollister"]
description = "A tool to download mangas from mangadex to be used for conversion to epub."
readme = "readme.md"
repository = "https://github.com/RiyeUK/manga-dl/"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
indicatif = "0.17.5"
mangadex-api = { version = "2.2.1", features = ["multi-thread"] }
mangadex-api-schema-rust = "0.3.2"
mangadex-api-types-rust = "0.3.4"
reqwest = "0.11.18"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "time"] }
uuid = "1.4.0"
